styles.css
/* ... */
.image-9 {
    width: 8vw;
    padding-top: 20px;
}

.div-block-6 {
    grid-column-gap: 16px;
    grid-row-gap: 16px;
    grid-template:
        '.' 6vh
        '.' 6vh
        '.' 6vh
        '.' 6vh
        '.' 6vh
        'Area' 6vh
        / 6vw 6vw 6vw 6vw 6vw 6vw;
    grid-auto-columns: 1fr;
    display: grid;
}

.flavor-sub {
    text-align: center;
    font-family: Inconsolata, monospace;
    font-size: 20px;
}

.flavor-emoji {
    text-align: center;
    font-size: 8vw;
    line-height: 13vw;
}

.navbar {
    color: #e5daf5;
    -webkit-text-stroke-color: #cbb6eb;
    background-color: #cbb6eb;
}

.nav-link {
    font-family: Rabie, sans-serif;
    font-size: 20px;
    font-weight: 600;
}

.nav-link-2 {
    font-family: Rabie, sans-serif;
}

.brand {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.bold-text {
    font-size: 1.2vw;
    line-height: 1.5vw;
}

.bold {
    font-size: 1.2vw;
}

.bold-text-3 {
    font-size: 1.8vw;
}

.div-block-7 {
    flex-flow: column;
    justify-content: center;
    align-items: center;
    height: 90vh;
    padding-top: 0;
    padding-bottom: 0;
    display: flex;
}

.link {
    color: #000;
    font-size: 5vw;
    line-height: 5vw;
    text-decoration: none;
}

.link.w--current {
    margin-left: auto;
    margin-right: auto;
}

.image-10 {
    text-align: center;
    width: 62%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.link-block-2 {
    align-self: center;
}

.container {
    -webkit-text-stroke-color: #cbb6eb;
    background-color: #cbb6eb;
}

.div-block-8 {
    height: 100vh;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 5vh;
    padding-bottom: 5vh;
}

@media screen and (max-width: 991px) {
    .image {
        width: 80%;
    }

    .div-block {
        min-height: 1svh;
        max-height: 1svh;
        margin-top: 100px;
        margin-bottom: 100svh;
    }

    .text-block-3 {
        font-size: 6vw;
    }

    .div-block-2 {
        justify-content: center;
        align-items: center;
        margin-top: 5vh;
        margin-left: 2vw;
        margin-right: 2vw;
    }

    .image-2 {
        width: 40%;
    }

    .customer-feedback {
        background-color: #fff;
        height: auto;
    }

    .hero {
        width: 80%;
        padding-bottom: 0;
    }

    .image-3 {
        border-radius: 5vw;
        order: -1;
        width: 30%;
    }

    .mathematics {
        padding-left: 0;
        padding-right: 0;
    }

    .hero-text {
        padding-top: 14vw;
    }

    .text-block-4 {
        font-size: 6vw;
        line-height: 8vw;
    }

    .text-block-4.current {
        font-size: 4vw;
        line-height: 3.6vw;
    }

    .text-block-4.current.newflavors {
        font-size: 4vw;
    }

    .button {
        font-size: 3vw;
        line-height: 4vw;
    }

    .button.feedback {
        width: 45vw;
        min-width: 45vw;
        font-size: 3vw;
        line-height: 5vw;
    }

    .text-block-5 {
        font-size: 15vw;
    }

    .image-5 {
        width: 200%;
        font-size: 20px;
    }

    .subtitle,
    .text-block-8.signs {
        font-size: 4vw;
        line-height: 5vw;
    }

    .div-block-4.drewbucha-hero {
        grid-column-gap: 5vw;
        grid-row-gap: 5vw;
        flex-flow: column;
        margin-bottom: 5vw;
    }

    .headers {
        font-size: 7vw;
    }

    .image-7 {
        width: 100%;
    }

    .flavors {
        padding-left: 10vw;
        padding-right: 10vw;
    }

    .image-9 {
        width: 14vw;
    }

    .flavor-emoji {
        font-size: 15vw;
        line-height: 15vw;
        text-decoration: none;
    }

    .navbar {
        display: none;
    }

    .bold-text {
        font-size: 3vw;
    }

    .div-block-7 {
        justify-content: center;
        height: 100vh;
    }

    .image-10 {
        width: 40%;
    }

    .div-block-8 {
        height: auto;
    }

    .nav-menu-2 {
        background-color: rgba(0, 0, 0, 0);
    }

    .menu-button,
    .menu-button.w--open,
    .body {
        background-color: #cbb6eb;
    }
}

@media screen and (max-width: 767px) {
    .image {
        width: 90%;
    }

    .div-block-2 {
        margin-top: 3svh;
    }
}

@media screen and (max-width: 479px) {
    .image {
        width: 90%;
    }

    .div-block {
        min-height: 1svh;
        max-height: 1svh;
        margin-top: 5svh;
        margin-bottom: 5svh;
    }

    .div-block-2 {
        margin-left: 2svw;
        margin-right: 2svw;
    }

    .image-6 {
        height: 3vh;
    }
}

#w-node-_5f818892-ca75-bbec-796f-f2a604a0d323-21dee429 {
    grid-area: 1 / 2 / 3 / 3;
    align-self: center;
    justify-self: center;
}

#w-node-d86682c0-e8fc-11bf-374c-10cde2c17ff9-21dee429 {
    grid-area: 1 / 4 / 3 / 5;
}

#w-node-_59a47e8d-eea2-33be-c292-9efa7690c887-21dee429 {
    grid-area: 1 / 5 / 3 / 6;
}

#w-node-_5dce3a8d-bcc2-822d-d88a-50c90fa61fb2-21dee429,
#w-node-dee2436c-e675-1f70-8d7e-610ec7c9d650-21dee429 {
    grid-area: span 1 / span 1 / span 1 / span 1;
}

#w-node-_89fb9b33-7e9a-03a5-ea7b-641bbd6092a1-21dee429 {
    grid-area: 1 / 1 / 3 / 3;
    align-self: end;
    justify-self: center;
}

#w-node-_0498a081-9609-a7b0-5baa-ce70b2ea93a2-21dee429 {
    grid-area: 2 / 5 / 4 / 7;
    align-self: end;
    justify-self: center;
}

#w-node-_02c5d5d2-0600-d471-cfcb-ab33197deb56-21dee429 {
    grid-area: 4 / 3 / 6 / 5;
    align-self: end;
}

#w-node-_9361dcf5-922a-45af-d70c-7de9a250a64a-21dee429 {
    grid-area: 6 / 3 / 7 / 5;
}

#w-node-c9fdab73-c1cf-fb2a-4a8e-9e18e8d6383c-21dee429 {
    grid-area: 4 / 5 / 5 / 7;
}

#w-node-_3ea285c6-8306-d7f7-1866-dbcec18ffbcf-21dee429 {
    grid-area: 3 / 1 / 4 / 3;
}
/* ... */

